--- a/css/style.css
+++ b/css/style.css
@@ -63,8 +63,10 @@ header{
 .menu ul li a{
 	text-transform: uppercase;
 	text-decoration: none;
-	margin: 10px 45px;
+	margin: 0px 50px;
 	color: #626262 ;
+	border-bottom: 1px solid transparent;
+	transition: .33s linear;
 	display: inline-block;
 
 }
@@ -87,14 +89,75 @@ header{
 	width: 100%;
 }
 /*banner end*/
-/*newsletter start*/
+/*perfect start*/
+.perfect{
+	padding: 100px 0 30px;
+}
 .container2{
+	overflow: hidden;
 	width: 80%;
 	margin: 0 auto;
-
-	
+	/*border: 1px solid;*/	
 }
+.p_content{}
+.c_light{
+	margin: 0;
+	font-family: "Ubuntu", sans-serif;
+	text-transform: uppercase;
+	font-size: 16px;
+	font-weight: 400;
+}
+.c_title{
+	margin: 20px 0px 25px;
+	font-size: 30px;
+	font-weight: 400;	
+} 
+.c_text{
+	margin: 0;
+	line-height: 24px;
+}
+.p_link{
+	text-decoration: none;
+	display: inline-block;
+	margin-top: 45px;
+	color: #626262;
+}
+/*perfect end*/
+/*blog start*/
+.blog{
+	padding: 0 0 100px;
+}
+.container2{
+	
+	margin: 0 auto;
+	/*border: 1px solid;*/
+
+}
+.b_item{
+	margin-top: 70px;
+	box-sizing: border-box;
+	width: 47%;
+	float: left;
+	/*border: 5px solid;*/
+}
+.b_item:nth-child(even){
+	margin-left: 6%;
+
+}
+.c_light{
+	padding: 23px 0px 23px;
+ }
+.b_img{
+	margin-bottom: 20px;
+}
+.b_img img{
+	width: 100%;
+}
+/*blog end*/
+/*newsletter start*/
+
 .news{
+	margin-top: 100px;
 	background-color:#f0f0f0 ;
 	padding: 70px 0px;
 }
@@ -117,12 +180,12 @@ header{
 }
 .s_form input{
 	font-family:  "Playfair Display", serif;
-	font-size:1 4px;
+	font-size:14px;
 	width:345px;
 	height: 45px;
 	border: none;
 	border-bottom:1px solid  #000000 ;
-	color: #626626;
+	color: #626262;
 	background-color: transparent;
 	padding-left: 5px;
 	padding-right: 45px;
@@ -145,6 +208,83 @@ header{
 }
 
 /*newsletter end*/
+/*blog2 start*/
+.blog2{
+	padding: 30px 0px 100px;
+}
+/*blog2 end*/
+/*load start*/
+.load{
+	text-align: center;
+}
+.load button{
+	
+	margin: 100px 0 100px;
+    width: 165px;
+    height: 60px;
+    border: 1px solid #626262;
+	background-color: transparent;
+	cursor: pointer;
+	font-family:"Playfair Display", serif;
+	font-size: 20px;
+	font-weight: 400;
+	color: #626262;
+	transition: .33s linear;
+
+}
+
+.load button:hover{
+	background-color: #626262;
+	color: white;
+	
+	
+}
+
+/*load end*/
+/*footer start*/
+footer{
+   background-color: #f0f0f0;
+   padding: 20px;
+}
+.container{
+
+}
+.pages{
+	width: 25%;
+	float: left;
+}
+.pages ul{
+
+	list-style: none;
+	float: right;
+}
+.pages ul li{
+	padding: 0px 20px 0px;
+	display: inline-block;
+}
+.pages ul li a{
+	color: #000000;
+	text-decoration: none;
+}
+.social{
+	width: 25%;
+	float: right;
+}
+.social ul{
+	list-style: none;
+}
+.social ul li{
+	padding: 0 15px 0px;
+	display: inline-block;
+}
+
+.social ul li img{}
+.social ul li img:last-child{
+	margin-right: 0;
+	
+}
+/*footer end*/
+
 
 
 
